[package]
name = "magnusi-tech-server"
version = "0.6.0"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>"]
build = "build.rs"

[dependencies]
light_pencil = { path = "./light_pencil" }
lazy_static = "1.1.0"
comrak = "0.2.14"
ansi_term = "0.11.0"
serde = "1.0.76"
serde_derive = "1.0.76"
toml = "0.4.6"
